# doc_analysis

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  env.example  meta.json  pyproject.toml  qa_report.py  requirements.txt  setup.py  st.txt  uvicorn_log_config.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  ENV_VARIABLES.md  ENV_VERIFICATION.md  QA_REPORT.md  QA_REPORT_OPTIMIZATIONS.md  TESTING.md
examples/: README_TRANSFORMS.md  apply_transforms.py
monitoring/: README.md  TROUBLESHOOTING.md
monitoring/grafana/dashboards/: doc-analysis-dashboard.json
monitoring/prometheus/: prometheus.yml
services/ocr_service/: .dockerignore  Dockerfile  README.md  __init__.py  actors.py  config.yaml  healthcheck.py  pyproject.toml  run_worker.sh
src/: __init__.py  workers.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py  routes.py
src/classification/: __init__.py  classifier_service.py  feature_engineering.py  models.py
src/cli/: __init__.py  dependencies.py  main.py
src/config/: __init__.py  manager.py
src/models/: __init__.py  registry.py
src/pipeline/: __init__.py  colometry.py  features.py  geometry.py  models.py  preprocessing.py
src/services/: __init__.py  processing_service.py  task_manager.py
src/utils/: bootstrap.py  capture_classifier.py  config.py  config_loader.py  dlq_manager.py  exceptions.py  file_handler.py  image_enhancer.py  logger.py  meta_generator.py  metrics.py  ocr_client.py  ocr_engines.py  pdf_handler.py  qa_flags.py  qa_report.py  storage.py  transform_applier.py  transform_handler.py  worker_init.py
tests/: __init__.py  conftest.py  test_api.py  test_pdf.py  test_pipeline.py
tests/fixtures/: README.md
tests/integration/: __init__.py  test_api_classification.py  test_api_endpoints.py  test_pipeline_pdf.py  test_preprocessing.py  test_training_pipeline.py
tests/unit/: __init__.py  test_api_worker_functions.py  test_capture_classifier.py  test_classifier_service.py  test_feature_engineering.py  test_file_handler.py  test_geometry_normalizer.py  test_geometry_utils.py  test_image_enhancer.py  test_meta_generator.py  test_model_registry.py  test_pdf_handler.py  test_qa_flags.py  test_training_config.py  test_training_scripts.py  test_transform_applier.py  test_transform_handler.py
training/: .gitignore  README.md  __init__.py  create_dataset.py  prepare_training_data.py  train_classifier.py
